# demo-library-simple

./: CMakeLists.txt  LICENSE  README.md
demo_binary/: CMakeLists.txt  demo.cpp
foo_library/: CMakeLists.txt  foo_library.cpp  foo_library.h  foo_support.h
